// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validate-member-update should handle validation errors for invalid update data 1`] = `
{
  "content": [
    {
      "text": "{"type":"https://tools.ietf.org/html/rfc9110#section-15.5.1","title":"One or more validation errors occurred.","status":400,"errors":[{"$.variants[0].name":["The Name field is required."]}],"traceId":"normalized-trace-id"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`validate-member-update should handle validation for non-existent member 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"The content could not be found","status":404,"operationStatus":"NotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`validate-member-update should validate a member update with valid data 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;
